Add beginner start & give more starting money

--- a/airline-web/app/views/index.scala.html
+++ b/airline-web/app/views/index.scala.html
@@ -754,21 +754,22 @@
 
 								<div class="flex-container-width-third">
 									<div>
-										<p class="pt-2">Current route quality:</p>
+										<h5 class="">Route quality</h5>
+										<p class="pt-2">Current quality:</p>
 										<div id="planLinkQuality"></div>
-										<p>Set route service level:</p>
-										<div class="pt-2" id="serviceLevelBar" data-empty-icon='@routes.Assets.versioned("images/icons/star-empty.svg")' data-fill-icon='@routes.Assets.versioned("images/icons/star-full.svg")'></div>
+										<p class="pt-2">Set route service level:</p>
+										<div id="serviceLevelBar" data-empty-icon='@routes.Assets.versioned("images/icons/star-empty.svg")' data-fill-icon='@routes.Assets.versioned("images/icons/star-full.svg")'></div>
 										<input type="hidden" id="planLinkServiceLevel" value="1"/>
 									</div>
 									<div id="planLinkExpectedFromQuality">
-										<p class="strong">From <span class="planFromIata"></span></p>
+										<p class="strong pt-2">From <span class="planFromIata"></span></p>
 										<p><span class="inline-block w-68">first:</span><span class="first scale-75"></span></p>
 										<p><span class="inline-block w-68">business:</span><span class="business scale-75"></span><p>
 										<p><span class="inline-block w-68">economy:</span><span class="economy scale-75"></span></p>
 										<p><span class="inline-block w-68">discount:</span><span class="discount scale-75"></span><p>
 									</div>
 									<div id="planLinkExpectedToQuality">
-										<p class="strong">From <span class="planToIata"></span></p>
+										<p class="strong pt-2">From <span class="planToIata"></span></p>
 										<p><span class="inline-block w-68">first:</span><span class="first scale-75"></span></p>
 										<p><span class="inline-block w-68">business:</span><span class="business scale-75"></span></p>
 										<p><span class="inline-block w-68">economy:</span><span class="economy scale-75"></span></p>
