--- a/airline-web/public/stylesheets/main.css
+++ b/airline-web/public/stylesheets/main.css
@@ -53,7 +53,7 @@ html[data-theme='dark'] {
   --item-label-color: lightgray;
   --background-gradient-color: background-color: rgba(0, 0, 0, 0.4);
   --background-gradient-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-  --section-background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+  --section-background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
   --section-background-color: rgba(0, 0, 0, 0.6);
   --button-shadow: inset 0 0 2px rgba(255, 255, 255, 0.4);
   --button-background: rgba(255, 255, 255, 0.2);
@@ -1800,7 +1800,7 @@ i, .italic {
 }
 div#serviceLevelBar {
     scale: 1.2;
-    transform: translate(9%, 0);
+    transform: translate(9%, -9%);
 }
 .airplaneIcon {
     padding: 1px;
