--- a/airline-web/app/views/index.scala.html
+++ b/airline-web/app/views/index.scala.html
@@ -4975,7 +4975,7 @@
 
 	<!-- airplane model configuration -->
 	<div id="modelConfigurationModal" class="modal">
-		<div class="modal-content"  style="width : 800px; height: 800px; margin: 5% auto; overflow:auto;">
+		<div class="modal-content"  style="max-width: 940px; min-width: 600px; height: 800px; margin: 5% auto; overflow:auto;">
 			<span class="close" onclick="closeModal($('#modelConfigurationModal'))">&times;</span>
 			<h4><span class="modelName"></span>&nbsp;Configuration</h4>
 			<p class="pb-2"><b class="modelCapacity"></b> Capacity</p>
@@ -5337,7 +5337,7 @@
 					  </div>
 				  </div>
 				  <p><span class="dot"/>Cannot assign Olympic bonus delegates</p>
-				  <p><span class="dot"/>Currenlty need &nbsp;<span class="delegatesRequired"></span>&nbsp;delegates to maintain bases in this country</p>
+				  <p><span class="dot"/>Currently need &nbsp;<span class="delegatesRequired"></span>&nbsp;delegates to maintain bases in this country</p>
 				  <p><span class="dot"/>Each delegate level provides&nbsp;<span class="delegateMultiplier"></span>&nbsp;relationship points. Each delegate starts at level 0 and gains levels over time. Hover for details.</p>
 				  <button type="button" class="button" onclick="updateCountryDelegates()">Confirm</button>
 				  <button type="button" class="button" onclick="closeModal($('#airlineCountryRelationshipModal'))">Cancel</button>
