Use game constants, cleanup

--- a/airline-web/app/views/index.scala.html
+++ b/airline-web/app/views/index.scala.html
@@ -665,7 +665,7 @@
 								</div>
 
 								<div class="flex-row py-2">
-									<div style="width:162px"><p>Direct Demand<small> at current prices:</small></p></div>
+									<div style="width:162px"><p>Direct Demand:<br><small><i>at current prices</i></small></p></div>
 									<div class="h-4">
 										<span id="planLinkDirectDemand"></span>
 										<div class="tooltip pl-1">
