--- a/airline-web/app/views/index.scala.html
+++ b/airline-web/app/views/index.scala.html
@@ -5840,12 +5840,12 @@
   <link rel="preconnect" href="https://p.typekit.net" crossorigin />
   <link rel="preload" href="https://p.typekit.net" crossorigin>
   <link rel="stylesheet" href="https://use.typekit.net/plw0ulw.css">
-  <script src='@routes.Assets.versioned("javascripts/main.js?=1")'></script>
+  <script src='@routes.Assets.versioned("javascripts/main.js?=2")'></script>
   <script defer src='@routes.Assets.versioned("javascripts/airport.js?=1")'></script>
   <script src='@routes.Assets.versioned("javascripts/airport-asset.js")'></script>
-  <script src='@routes.Assets.versioned("javascripts/airplane.js?=1")'></script>
+  <script src='@routes.Assets.versioned("javascripts/airplane.js?=2")'></script>
   <script src='@routes.Assets.versioned("javascripts/model-configuration.js?=1")'></script>
-  <script src='@routes.Assets.versioned("javascripts/airline.js")'></script>
+  <script src='@routes.Assets.versioned("javascripts/airline.js?=2")'></script>
   <script src='@routes.Assets.versioned("javascripts/link-history.js")'></script>
   <script src='@routes.Assets.versioned("javascripts/delegate.js")'></script>
   <script src='@routes.Assets.versioned("javascripts/country.js")'></script>
