--- a/airline-web/app/views/index.scala.html
+++ b/airline-web/app/views/index.scala.html
@@ -3620,14 +3620,14 @@
 							  <div style="position: relative;">
 								  <div class="searchInput" data-search-type="airport">
 									  <input type="text" style="width: 99%" tabindex="101" class="fromAirport" placeholder="From" oninput="searchChange($(this))" onfocus="$(this).select();" onfocusout="searchFocusOut($(this))" onkeyup="searchKeyUp(event, $('div.searchFieldContainer input.fromAirport'))" onkeydown="searchKeyDown(event, $('div.searchFieldContainer input.fromAirport'))">
-									  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinning-wheel.gif' style="height: 16px"></span>
+									  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinner-plane.svg' style="height: 60px"></span>
 								  </div>
 								  <div class="searchResult"></div>
 							  </div>
 							  <div style="position: relative;">
 								  <div class="searchInput" data-search-type="airport">
 									  <input type="text" style="width: 99%" tabindex="102" class="toAirport" placeholder="To" oninput="searchChange($(this))" onfocus="$(this).select();" onfocusout="searchFocusOut($(this))" onkeyup="searchKeyUp(event, $('div.searchFieldContainer input.toAirport'))" onkeydown="searchKeyDown(event, $('div.searchFieldContainer input.toAirport'))">
-									  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinning-wheel.gif' style="height: 16px"></span>
+									  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinner-plane.svg' style="height: 60px"></span>
 								  </div>
 								  <div class="searchResult"></div>
 							  </div>
@@ -3650,14 +3650,14 @@
 								  <div style="float: left; width : 50%; position: relative;">
 									  <div class="searchInput" data-search-type="airport">
 										  <input type="text" style="width: 80%" tabindex="101" class="fromAirport" data-search-group="fromDestination" placeholder="From Airport (Any)" autocomplete="no" oninput="searchChange($(this))" onfocus="$(this).select();" onfocusout="searchFocusOut($(this))" onkeyup="searchKeyUp(event, $('div.historySearch input.fromAirport'))" onkeydown="searchKeyDown(event, $('div.historySearch input.fromAirport'))">
-										  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinning-wheel.gif' style="height: 16px"></span>
+										  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinner-plane.svg' style="height: 60px"></span>
 									  </div>
 									  <div class="searchResult"></div>
 								  </div>
 								  <div style="float: left; width : 50%; position: relative;">
 									  <div class="searchInput" data-search-type="airport">
 										  <input type="text" style="width: 80%" tabindex="102" class="toAirport" data-search-group="toDestination" placeholder="To Airport (Any)" autocomplete="no" oninput="searchChange($(this))" onfocus="$(this).select();" onfocusout="searchFocusOut($(this))" onkeyup="searchKeyUp(event, $('div.historySearch input.toAirport'))" onkeydown="searchKeyDown(event, $('div.historySearch input.toAirport'))">
-										  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinning-wheel.gif' style="height: 16px"></span>
+										  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinner-plane.svg' style="height: 60px"></span>
 									  </div>
 									  <div class="searchResult"></div>
 								  </div>
@@ -3667,14 +3667,14 @@
 								  <div style="float: left; width : 50%; position: relative;">
 									  <div class="searchInput" data-search-type="country">
 										  <input type="text" style="width: 80%" tabindex="103" class="fromCountry" data-search-group="fromDestination" placeholder="From Country (Any)" autocomplete="no" oninput="searchChange($(this))" onfocus="$(this).select();" onfocusout="searchFocusOut($(this))" onkeyup="searchKeyUp(event, $('div.historySearch input.fromCountry'))" onkeydown="searchKeyDown(event, $('div.historySearch input.fromCountry'))">
-										  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinning-wheel.gif' style="height: 16px"></span>
+										  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinner-plane.svg' style="height: 60px"></span>
 									  </div>
 									  <div class="searchResult"></div>
 								  </div>
 								  <div style="float: left; width : 50%; position: relative;">
 									  <div class="searchInput" data-search-type="country">
 										  <input type="text" style="width: 80%" tabindex="104" class="toCountry" data-search-group="toDestination" placeholder="To Country (Any)" autocomplete="no" oninput="searchChange($(this))" onfocus="$(this).select();" onfocusout="searchFocusOut($(this))" onkeyup="searchKeyUp(event, $('div.historySearch input.toCountry'))" onkeydown="searchKeyDown(event, $('div.historySearch input.toCountry'))">
-										  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinning-wheel.gif' style="height: 16px"></span>
+										  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinner-plane.svg' style="height: 60px"></span>
 									  </div>
 									  <div class="searchResult"></div>
 								  </div>
@@ -3684,14 +3684,14 @@
 <!--								  <div style="float: left; width : 50%; position: relative;">-->
 <!--									  <div class="searchInput" data-search-type="zone">-->
 <!--										  <input type="text" style="width: 80%" tabindex="105" class="fromZone" data-search-group="fromDestination" placeholder="From Zone (Any)" autocomplete="no" oninput="searchChange($(this))" onfocus="$(this).select();" onfocusout="searchFocusOut($(this))" onkeyup="searchKeyUp(event, $('div.historySearch input.fromZone'))" onkeydown="searchKeyDown(event, $('div.historySearch input.fromZone'))">-->
-<!--										  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinning-wheel.gif' style="height: 16px"></span>-->
+<!--										  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinner-plane.svg' style="height: 60px"></span>-->
 <!--									  </div>-->
 <!--									  <div class="searchResult"></div>-->
 <!--								  </div>-->
 <!--								  <div style="float: left; width : 50%; position: relative;">-->
 <!--									  <div class="searchInput" data-search-type="zone">-->
 <!--										  <input type="text" style="width: 80%" tabindex="106" class="toZone" data-search-group="toDestination" placeholder="To Zone (Any)" autocomplete="no"  oninput="searchChange($(this))" onfocus="$(this).select();" onfocusout="searchFocusOut($(this))" onkeyup="searchKeyUp(event, $('div.historySearch input.toZone'))" onkeydown="searchKeyDown(event, $('div.historySearch input.toZone'))">-->
-<!--										  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinning-wheel.gif' style="height: 16px"></span>-->
+<!--										  <span class="spinner" style="display: none;"><img src='assets/images/icons/spinner-plane.svg' style="height: 60px"></span>-->
 <!--									  </div>-->
 <!--									  <div class="searchResult"></div>-->
 <!--								  </div>-->
@@ -3703,14 +3703,14 @@
 									<div class = "searchCriterion">
 										<div class="searchInput" data-search-type="airline">
 											<input type="text" style="width: 80%" tabindex="107" class="airline" data-search-group="entity" placeholder="Airline (Any)" autocomplete="no" oninput="searchChange($(this))" onfocus="$(this).select();" onfocusout="searchFocusOut($(this))" onkeyup="searchKeyUp(event, $('div.historySearch input.airline'))" onkeydown="searchKeyDown(event, $('div.historySearch input.airline'))">
-											<span class="spinner" style="display: none;"><img src='assets/images/icons/spinning-wheel.gif' style="height: 16px"></span>
+											<span class="spinner" style="display: none;"><img src='assets/images/icons/spinner-plane.svg' style="height: 60px"></span>
 										</div>
 										<div class="searchResult"></div>
 									</div>
 									<div class = "searchCriterion">
 										<div class="searchInput" data-search-type="alliance">
 											<input type="text" style="width: 80%" tabindex="108" class="alliance" data-search-group="entity" placeholder="Alliance (Any)" autocomplete="no"  oninput="searchChange($(this))" onfocus="$(this).select();" onfocusout="searchFocusOut($(this))" onkeyup="searchKeyUp(event, $('div.historySearch input.alliance'))" onkeydown="searchKeyDown(event, $('div.historySearch input.alliance'))">
-											<span class="spinner" style="display: none;"><img src='assets/images/icons/spinning-wheel.gif' style="height: 16px"></span>
+											<span class="spinner" style="display: none;"><img src='assets/images/icons/spinner-plane.svg' style="height: 60px"></span>
 										</div>
 										<div class="searchResult"></div>
 									</div>
@@ -5378,7 +5378,7 @@
 				<div style="position: relative; display: inline-block;">
 					<div class="searchInput" data-search-type="airport">
 						<input type="text" tabindex="101" class="airport" placeholder="Airport/City Area" autocomplete="no" oninput="searchChange($(this))" onfocus="$(this).select();" onfocusout="searchFocusOut($(this))" onkeyup="searchKeyUp(event, $(this))" onkeydown="searchKeyDown(event, $(this))">
-						<div style="width: 20px; display: inline-block" ><span class="spinner" style="display: none;"><img src='assets/images/icons/spinning-wheel.gif' style="height: 16px"></span></div>
+						<div style="width: 20px; display: inline-block" ><span class="spinner" style="display: none;"><img src='assets/images/icons/spinner-plane.svg' style="height: 60px"></span></div>
 					</div>
 					<div class="searchResult"></div>
 				</div>
@@ -5834,7 +5834,7 @@
 	</div>
 
 	<!-- Modal for loading -->
-	<div class="loadingSpinner"><!-- Place at bottom of page --></div>
+	<div class="loadingSpinner"><div class="loader-svg"></div></div>
 
   <link rel="preconnect" href="https://use.typekit.net" crossorigin />
   <link rel="preconnect" href="https://p.typekit.net" crossorigin />
@@ -5845,7 +5845,7 @@
   <script src='@routes.Assets.versioned("javascripts/airport-asset.js")'></script>
   <script src='@routes.Assets.versioned("javascripts/airplane.js?=2")'></script>
   <script src='@routes.Assets.versioned("javascripts/model-configuration.js?=1")'></script>
-  <script src='@routes.Assets.versioned("javascripts/airline.js?=2")'></script>
+  <script src='@routes.Assets.versioned("javascripts/airline.js?=3")'></script>
   <script src='@routes.Assets.versioned("javascripts/link-history.js")'></script>
   <script src='@routes.Assets.versioned("javascripts/delegate.js")'></script>
   <script src='@routes.Assets.versioned("javascripts/country.js")'></script>
@@ -5858,7 +5858,7 @@
   <script src='@routes.Assets.versioned("javascripts/alliance.js")'></script>
   <script src='@routes.Assets.versioned("javascripts/log.js")'></script>
   <script src='@routes.Assets.versioned("javascripts/event.js")'></script>
-  <script src='@routes.Assets.versioned("javascripts/search.js")'></script>
+  <script src='@routes.Assets.versioned("javascripts/search.js?=1")'></script>
   <script src='@routes.Assets.versioned("javascripts/facility.js")'></script>
   <script src='@routes.Assets.versioned("javascripts/departures.js")'></script>
   <script src='@routes.Assets.versioned("javascripts/gadgets.js")'></script>
