Fix cost ppp calculator, update game constants, enforce 5 star aircraft premium only

--- a/airline-web/app/views/index.scala.html
+++ b/airline-web/app/views/index.scala.html
@@ -937,7 +937,6 @@
 							<div id="airplaneModelDetails" style="width: 100%; display: none;">
 								<div class="table">
 									<h4>Airplane Model Details</h4>
-				<!-- 					Model : <select id="airplaneModelOption" onchange="updateModelInfo()"></select><br/> -->
 									<div class="table-row">
 										<div class="label" style="width: 50%;"><h5>Model:</h5></div>
 										<div class="value" id="modelName"></div>
@@ -997,6 +996,10 @@
 									<div class="table-row">
 										<div class="label">Delivery Time:</div>
 										<div class="value delivery"></div>
+									</div>
+									<div class="table-row aircraftNote">
+										<div class="label">Note:</div>
+										<div class="warning note"></div>
 									</div>
 									<button type="button" class="button add ml-0" onclick="promptBuyNewAirplane($('#airplaneModelDetails .selectedModel').val(), true, $('#planLinkFromAirportId').val())">Purchase</button>
 									<button type="button" class="button" onclick="showAirplaneBaseFromPlanLink($('#airplaneModelDetails .selectedModel').val())">Base</button>
@@ -1813,6 +1816,10 @@
 									<div class="table-row">
 										<div class="label">Total in Circulation:</div>
 										<div class="value total"></div>
+									</div>
+									<div class="table-row aircraftNote">
+										<div class="label">Note:</div>
+										<div class="warning note"></div>
 									</div>
 									<input type="hidden" class="selectedModel"/>
 								</div>
@@ -4187,8 +4194,8 @@
 	<div id="facilityModal" class="modal facility">
 	  <div class="modal-content"  style="width : 400px;">
 	    <span class="close" onclick="closeModal($(this).closest('.modal'))">&times;</span>
-	    <h4><span class="facilityType"></span></h4>
-		<h6 class="facilityDescription"></h6>
+	    <h4 class="modalHeader"><span class="facilityType"></span></h4>
+		<p class="facilityDescription"></p>
 	    <div class="table" style="width: 100%">
 			<div class="table-row">
 				<div class="label" style="width: 50%"><h5>Name:</h5></div>
@@ -4243,13 +4250,15 @@
 
 		  <div class="data table genericTransits" style="width: 100%">
 			  <div class="table-header">
-				  <div class="cell" style="width: 40%">To Airport</div>
-				  <div class="cell" style="width: 20%" align="right">Pop</div>
-				  <div class="cell" style="width: 20%" align="right">Cap</div>
-				  <div class="cell" style="width: 20%" align="right">PAX</div>
+				  <div class="cell" style="width: 30%">To Airport</div>
+				  <div class="cell" style="width: 15%" align="right">Pop</div>
+				  <div class="cell" style="width: 15%" align="right">Cap</div>
+				  <div class="cell" style="width: 15%" align="right">Cost</div>
+				  <div class="cell" style="width: 15%" align="right">Pax</div>
 			  </div>
 		  </div>
 
+		  <p class="helper-rule">When traveling to/from a metro connected airport, the above cost is added to each passenger's perceived journey cost, which may be further modified by how much longer a journey takes and how much they value speed.</p>
 		  <button type="button" class="button confirmButton" onclick="closeModal($(this).closest('.modal'))">OK</button>
 	  </div>
 	</div>
@@ -4654,7 +4663,7 @@
   <div id="linkConfirmationModal" class="modal">
 	  <div class="modal-content" style="width : 600px">
 		  <span class="close" onclick="closeModal($('#linkConfirmationModal'))">&times;</span>
-		  <h4 style="margin-bottom: 10px;" class="modalHeader"></h4>
+		  <h4 class="modalHeader"></h4>
 		  <div style=" float: left; width:50%; padding-left: 10%; box-sizing: border-box; display: flex; flex-direction: column; align-items: center;">
 			  <img class="fromAirport roundImage" style="height: 150px; width:150px; max-height: 30vw; max-width: 30vw;">
 			  <div style="display:inline-block; align-self: center; margin-top:5px; font-weight: bold;" class="fromAirportText"></div>
@@ -4752,7 +4761,7 @@
   <div id="negotiationDifficultyModal" class="modal">
 	  <div class="modal-content" style="width : 750px">
 		  <span class="close" onclick="closeModal($('#negotiationDifficultyModal'))">&times;</span>
-		  <h4 style="margin-bottom: 10px;" class="modalHeader">Negotiation Difficulty Details</h4>
+		  <h4 class="modalHeader">Negotiation Difficulty Details</h4>
           <div style="clear: both;"></div>
 		  <div class="negotiationInfo">
           <!-- requirements list-->
@@ -4857,7 +4866,7 @@
   <div id="negotiationAnimation" class="modal">
 	  <div class="modal-content" style="width : 520px; max-width : 95vw;">
 		  <span class="close" onclick="closeModal($('#negotiationAnimation'))">&times;</span>
-		  <h4 class="modalHeader" style="margin-bottom: 10px; text-align: center;">Negotiation in progress... Success Rate:&nbsp;<span class="successRate"></span>%</h4>
+		  <h4 class="modalHeader">Negotiation in progress... Success Rate:&nbsp;<span class="successRate"></span>%</h4>
 		  <div class="negotiationIcons" style="width: 260px; height: 35px; margin: auto;text-align:center;"></div>
 		  <div class="negotiationDescriptions" class="py-2 px-8" style="height: 15px; text-align: center;"></div>
 		  <div class="negotiationBar progressbar" style="margin: auto;">
