--- a/airline-web/public/stylesheets/main.css
+++ b/airline-web/public/stylesheets/main.css
@@ -844,6 +844,10 @@ div.section div.section {
   border-top: 0.5px solid lightgray;
 }
 
+.modalHeader {
+    margin: 0.5rem 0 1.5rem;
+}
+
 .modal-content {
 	background-image: var(--modal-content-background-image);
 }
