Model & pricing tweaks

--- a/airline-web/app/views/index.scala.html
+++ b/airline-web/app/views/index.scala.html
@@ -4252,14 +4252,14 @@
 		  <div class="data table genericTransits" style="width: 100%">
 			  <div class="table-header">
 				  <div class="cell" style="width: 30%">To Airport</div>
-				  <div class="cell" style="width: 15%" align="right">Pop</div>
-				  <div class="cell" style="width: 15%" align="right">Cap</div>
-				  <div class="cell" style="width: 15%" align="right">Cost</div>
+				  <div class="cell" style="width: 20%" align="right">Pop</div>
+				  <div class="cell" style="width: 20%" align="right">Distance</div>
+				  <div class="cell" style="width: 15%" align="right">Capacity</div>
 				  <div class="cell" style="width: 15%" align="right">Pax</div>
 			  </div>
 		  </div>
 
-		  <p class="helper-rule">When traveling to/from a metro connected airport, the above cost is added to each passenger's perceived journey cost, which may be further modified by how much longer a journey takes and how much they value speed.</p>
+		  <p class="helper-rule my-2">The further the distance, the more a passenger prefers to stay in their home airport.</p>
 		  <button type="button" class="button confirmButton" onclick="closeModal($(this).closest('.modal'))">OK</button>
 	  </div>
 	</div>
